another page with services n service detail

--- a/clinique_app/templates/_contacts.html
+++ b/clinique_app/templates/_contacts.html
@@ -2,4 +2,93 @@
 {% load static %}
 {% block content %}
 
+<div class="contacts-page">
+    <div class="container pt-5">
+        <div class="row">
+            <div class="col">
+                <nav aria-label="breadcrumb">
+                    <ol class="breadcrumb bg-transparent p-0">
+                        <li class="breadcrumb-item"><a href="/">Главная</a></li>
+                        <li class="breadcrumb-item active" aria-current="page">Услуги</li>
+                    </ol>
+                </nav>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 headers-wrapper">
+                <span class="section-subHeader">Наши контакты </span>
+                <span class="section-header">контакты</span>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="content-wrapper">
+                    <div class="top-banner">
+                        <img src="{% static 'img/contacts1.png' %}" alt="Illustration">
+                    </div>
+                    <div class="contacts-info">
+                        <h3>Наши контактные данные</h3>
+                        <div class="inner-wrapper">
+                            <div class="single-col">
+                                <img src="{% static 'img/marker.png' %}" alt="Map marker">
+                                <span>м. Парк Победы, улица Генерала Ермолова, 2</span>
+                            </div>
+                            <div class="single-col">
+                                <img src="{% static 'img/clock.png' %}" alt="Clock">
+                                <span>ежедневно 10:00 - 22:00</span>
+                            </div>
+                            <div class="single-col with-media">
+                                <div class="phone-div">
+                                    <img src="{% static 'img/phone.png' %}" alt="Phone">
+                                    <span>+7 (495) 162-51-93</span>
+                                </div>
+                                <div class="media">
+                                    <img src="{% static 'img/instagram.png' %}" alt="Instagram">
+                                    <img src="{% static 'img/facebook.png' %}" alt="Facebook">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-12 col-md-12 map-wrapper">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2246.3837414031973!2d37.51610251608806!3d55.73446120087366!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54bfa41abad99%3A0xb4ede820dd7c8197!2sGenerala%20Yermolova%20Ulitsa%2C%202%2C%20Moskva%2C%20121170!5e0!3m2!1sen!2sru!4v1605019086885!5m2!1sen!2sru"
+                        width="100%" height="500" frameborder="0" style="border:0;" allowfullscreen=""
+                        aria-hidden="false" tabindex="0"></iframe>
+            </div>
+            <div class="col-lg-12 map-wrapper2">
+                <div class="how-to-find"><h3>Как добраться до клиники</h3>
+                    <p>Подробная информация о том, как добраться до дома ул. Генерала Ермолова д. 2 наземным
+                        транспортом. Все остановки и автобусы в шаговой доступности от дома. Каким городским
+                        общественным транспортом можно доехать от ближайших станций жд или метро.</p></div>
+            </div>
+            <div class="col-xs-12 col-md-12 map-wrapper">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2246.3837414031973!2d37.51610251608806!3d55.73446120087366!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54bfa41abad99%3A0xb4ede820dd7c8197!2sGenerala%20Yermolova%20Ulitsa%2C%202%2C%20Moskva%2C%20121170!5e0!3m2!1sen!2sru!4v1605019086885!5m2!1sen!2sru"
+                        width="100%" height="500" frameborder="0" style="border:0;" allowfullscreen=""
+                        aria-hidden="false" tabindex="0"></iframe>
+            </div>
+        </div>
+    </div>
+    <div class="callback-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 input-headers"><span>ЦЕНЫ НА ПРИЁМ ВРАЧА-ДЕРМАТОЛОГА, КОСМЕТОЛОГА, ЭНДОКРИНОЛОГА, ТРИХОЛОГА</span>
+                    <span>Индивидуально расскажем</span> <span>про каждую услугу</span></div>
+                <div class="col-lg-12 inputs-wrapper">
+                    <form action="">
+                        <input type="text" placeholder="ФИО*">
+                        <input type="text" placeholder="Телефон*">
+                        <input type="text" placeholder="Почта">
+                        <button class="cta-button">Записаться</button>
+                    </form>
+                    <p>Я соглашаюсь на обработку персональных данных и с <a href="" style="color: #4f9c50;">политикой
+                        конфиденциальности</a></p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 {% endblock %}
