--- a/clinique_app/templates/_staff.html
+++ b/clinique_app/templates/_staff.html
@@ -18,10 +18,8 @@
     <div class="team-page__workers-section">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 headers-wrapper">
-                    <span class="section-subHeader">Наши специалисты </span>
-                    <span class="section-header">команда</span>
-                </div>
+                <div class="col-lg-12 headers-wrapper"><span class="section-subHeader">Наши специалисты </span><span
+                        class="section-header">команда</span></div>
             </div>
             <div class="row team__wrapper">
                 {% for staff in staff_list %}
