--- a/clinique_app/templates/base/footer.html
+++ b/clinique_app/templates/base/footer.html
@@ -2,10 +2,8 @@
 <footer>
     <div class="container">
         <div class="row">
-            <div class="col-12 headers-wrapper">
-                <span class="section-subHeader">Адрес клиники </span>
-                <span class="section-header">контакты</span>
-            </div>
+            <div class="col-12 headers-wrapper"><span class="section-subHeader">Адрес клиники </span><span
+                    class="section-header">контакты</span></div>
         </div>
         <div class="row">
             <div class="col-xs-12 col-md-5 contacts-wrapper">
@@ -19,7 +17,9 @@
                 </div>
                 <div class="btn-wrapper">
                     <button class="cta-button">Запись</button>
-                    <button class="cta-button"><img src="{% static 'img/whatsapp-white.png' %}" alt=""></button>
+                    <button class="cta-button">
+                        <img src="{% static 'img/whatsapp-white.png' %}" alt="">
+                    </button>
                 </div>
             </div>
             <div class="col-xs-12 col-md-7 map-wrapper">
@@ -29,7 +29,7 @@
             </div>
         </div>
     </div>
-    <nav class="navbar navbar-expand-lg navbar-light bg-white justify-content-center">
+    <nav class="navbar navbar-expand-xl navbar-light bg-white justify-content-center">
         <a class="navbar-brand" href="#">
             <img src="{% static 'img/logo.png' %}" alt="Company logo">
         </a>
@@ -46,7 +46,7 @@
                     <a class="nav-link" href="/services">Услуги</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Прайс-лист</a>
+                    <a class="nav-link" href="/prices">Прайс-лист</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">До и после</a>
@@ -58,13 +58,13 @@
                     <a class="nav-link" href="#">Онлайн</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/staff">Команда</a>
+                    <a class="nav-link" href="/stuff">Команда</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/qa">Вопросы</a>
+                    <a class="nav-link" href="/qa-page">Вопросы</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Контакты</a>
+                    <a class="nav-link" href="/contacts">Контакты</a>
                 </li>
                 <li class="call-us-block">
                     <img src="{% static 'img/whatsapp-green.png' %}" alt="Whatsapp">
@@ -78,9 +78,7 @@
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <p style="text-align: right; font-size: 10px;"><a href="https://www.divier.ru/"
-                                                                      style="color: #4f9c50; text-decoration: underline">Создание
-                        сайта </a>ДиВиЕр</p>
+                    <p style="text-align: right; font-size: 10px;"><a href="https://www.divier.ru/" style="color: #4f9c50; text-decoration: underline">Создание сайта </a>ДиВиЕр</p>
                 </div>
             </div>
         </div>
